# backup-suite

./: .clippy.toml  .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  .gitleaksignore  .publish-state.json  CHANGELOG.en.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cargo.toml.template  Dockerfile  IMPLEMENTATION_COMPLETE.md  INCREMENTAL_IMPLEMENTATION.md  INTEGRITY_IMPLEMENTATION.md  MUTATION_TESTING_FINAL_REPORT.md  MUTATION_TESTING_SUMMARY.md  PHASE2_IMPLEMENTATION.md  PHASE3_UX_IMPROVEMENTS.md  PUBLISHING.md  README.en.md  README.ja.md  README.md  README.zh-CN.md  README.zh-TW.md  RELEASE_NOTES_v1.0.0.md  SCHEDULER_IMPLEMENTATION.md  SECURITY.md  TODO.md  _backup-suite  _backup-suite.bash  backup-suite-analysis.json  deny.toml  mutation-testing-report.md  release-notes-v1.0.0.md  rustfmt.toml  setup-cargo-registry.sh  tasks.yml  todos.md
.claude/: CLAUDE.md
.github/: CI-CD-SUMMARY.md  dependabot.yml
.github/workflows/: README.md  benchmark.yml  ci-enhanced.yml  ci.yml  claude-maintenance.yml  cli-testing-enhanced.yml  cli-testing.yml  coverage.yml  release-enhanced.yml  release.yml  security.yml
Formula/: backup-suite.rb
benches/: ai_benchmark.rs  backup_benchmark.rs  backup_performance.rs  compression_benchmark.rs  crypto_benchmark.rs  integration_benchmark.rs  security_benchmark.rs  ui_benchmark.rs
cli-tests/: destructive-ops.bats  performance.bats  security.bats
cli-tests-full/: basic.bats  destructive-ops.bats  directory-traversal.bats  help.bats  multi-shell.bats  security.bats
docs/: AI_IMPLEMENTATION_PLAN.md  CLI-TESTING-GUIDE.md  E2E_TEST_COMPLETION_REPORT.md  E2E_TEST_EXPANSION_PLAN.md  MANUAL_TESTING_GUIDE.md  OWASP_TOP10_COMPLIANCE.md  PARALLEL_OPTIMIZATION.md  PHASE2_QUICK_START.md  SCHEDULER.md  VULNERABILITY_TEST_SUMMARY.md  example-config.toml  password-policy.md  schedule-setup-linux.md  schedule-setup-macos.md  shell-completion.md
docs/ai/: README.md  features.md  manual-test.md
docs/development/: ARCHITECTURE.md  HELP_IMPLEMENTATION_SUMMARY.md  HELP_QUICK_REFERENCE.md  README.md  SECURITY_AUDIT_REPORT.md  SECURITY_DELIVERY_SUMMARY.md  SECURITY_INTEGRATION_CHECKLIST.md  SECURITY_NAVIGATION_GUIDE.md  SECURITY_QUICK_REFERENCE.md  TESTING_IMPLEMENTATION_GUIDE.md  TESTING_QUICK_REFERENCE.md  TESTING_SUMMARY.md  TEST_INFRASTRUCTURE_SUMMARY.md  help-maintenance-guide.md  help-screen-design.md  visual-comparison.md
docs/smart/: README.md  features.md  manual-test.md
docs/testing/: COMPREHENSIVE_TEST_REPORT.md  PENETRATION_TEST_REPORT.md  RUST_QUALITY_REPORT.md  SECURITY_AUDIT_REPORT.md
docs/user/: INSTALL.md  USAGE.en.md  USAGE.md  USAGE.zh-CN.md  USAGE.zh-TW.md  VERIFICATION_CHECKLIST.md
examples/: benchmark_parallel.rs  incremental_backup_demo.sh  phase2_usage.sh  test_dashboard.rs  test_logging.rs  test_password_policy.rs  test_progress.rs
mutants-key-retest.out/mutants.out/: caught.txt  lock.json  mutants.json  outcomes.json  unviable.txt
mutants-path.out/mutants.out/: caught.txt  lock.json  missed.txt  mutants.json  outcomes.json  unviable.txt
mutants.out/mutants.out/: caught.txt  lock.json  mutants.json  outcomes.json  unviable.txt
mutants_phase1.out/mutants.out/: caught.txt  lock.json  missed.txt  mutants.json  outcomes.json  unviable.txt
mutants_phase1_retest.out/mutants.out/: caught.txt  lock.json  missed.txt  mutants.json  outcomes.json  unviable.txt
mutants_phase2.out/mutants.out/: caught.txt  lock.json  missed.txt  mutants.json  outcomes.json  unviable.txt
reports/: backup-suite--tests-report.html
scripts/: check-mutation-results.sh  check_quality.sh  generate-completion.sh  prepare_release.sh  record-demo.sh  run-mutation-tests.sh
src/: error.rs  i18n.rs  lib.rs  main.rs  main_ui_integration.patch  typo.rs
src/ai/: error.rs  mod.rs  types.rs
src/compression/: engines.rs  mod.rs
src/core/: backup.rs  cleanup.rs  config.rs  copy_engine.rs  filter.rs  history.rs  incremental.rs  integrity.rs  logging.rs  mod.rs  pipeline.rs  restore.rs  scheduler.rs  target.rs  validation.rs
src/crypto/: encryption.rs  key_management.rs  mod.rs  (+1 more)
tests/: ai_tests.rs  audit_tests.rs  backup_engine_tests.rs  comprehensive_e2e_tests.rs  compression_tests.rs  compression_variants_e2e_tests.rs  edge_cases_e2e_tests.rs  encryption_tests.rs  error_recovery_e2e_tests.rs  history_management_e2e_tests.rs  incremental_backup_e2e_tests.rs  incremental_tests.rs  integration_tests.rs  integrity_tests.rs  integrity_verification_e2e_tests.rs  nonce_verification.rs  phase2_integration_tests.rs  proptest.rs  proptest_crypto.rs  proptest_edge_cases.rs  proptest_security.rs  restore_engine_tests.rs  security_integration.rs  security_tests.rs  smart_tests.rs  test_low_priority_dirs.rs  ui_tests.rs
(+308 files in other folders)
